--- a/mohana_reddy_portfolio.html
+++ b/mohana_reddy_portfolio.html
@@ -203,7 +203,7 @@
 
     <!-- Hero Section -->
     <header id="hero" class="hero animate__animated animate__fadeIn">
-        <img src="C:\Users\mohana.reddy\Desktop\Yeddula Mohana Reddy Portfolio\Mohana Reddy PassPhoto.jpg" alt="Yeddula Mohana Reddy">
+        <img src="https://github.com/Mohana-Reddy/profile/blob/main/Mohana%20Reddy%20PassPhoto.jpg" alt="Yeddula Mohana Reddy">
         <h1>Yeddula Mohana Reddy</h1>
         <p>Security Consultant | Penetration Tester | Security Researcher</p>
         <div class="contact-buttons">
