--- a/mohana_reddy_portfolio.html
+++ b/mohana_reddy_portfolio.html
@@ -224,7 +224,7 @@
 
     <!-- Resume Button -->
     <div class="resume-container">
-        <a href="C:\Users\mohana.reddy\Desktop\Yeddula Mohana Reddy Portfolio\YEDDULA MOHANA REDDY_Security_Consultant.pdf" target="_blank" class="btn btn-info btn-animated">View Resume</a>
+        <a href="https://github.com/Mohana-Reddy/profile/blob/main/YEDDULA%20MOHANA%20REDDY_Security_Consultant.pdf" target="_blank" class="btn btn-info btn-animated">View Resume</a>
     </div>
 
     <!-- Education Section -->
